<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="cancel">C</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="div">/</string>

    <string name="disp"></string>
    <string name="dispHint"></string>

    <string name="app_name_slogan">calculate anything easily and quickly</string>
    <string name="backspace">bsp</string>
    <string name="dot">.</string>
    <string name="blank"></string>
    <string name="blank2"></string>
</resources>
