<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#fff">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/disp"
            android:id="@+id/display"
            android:hint="@string/dispHint"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">

    <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id="@+id/seven"
            android:text="@string/seven"
            />
    <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id="@+id/eight"
            android:text="@string/eight"
            />
    <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id="@+id/nine"
            android:text="@string/nine"
            />
    <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id="@+id/div"
            android:text="@string/div"
            />
</LinearLayout>

    <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp">
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/four"
    android:text="@string/four"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/five"
    android:text="@string/five"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/six"
    android:text="@string/six"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/mul"
    android:text="@string/mul"
            />
        </LinearLayout>

    <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp">
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/one"
    android:text="@string/one"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/two"
    android:text="@string/two"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/three"
    android:text="@string/three"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/sub"
    android:text="@string/sub"
            />
            </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/cancel"
    android:text="@string/cancel"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/zero"
    android:text="@string/zero"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/equal"
    android:text="@string/equal"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/add"
    android:text="@string/add"
            />
            </LinearLayout>

    <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp">
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/backspace"
    android:text="@string/backspace"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/dot"
    android:text="@string/dot"
            />

    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/blank"
    android:text="@string/blank"
            />
    <Button
    android:layout_width="55dp"
    android:layout_height="wrap_content"
    android:id="@+id/blank2"
    android:text="@string/blank2"
            />

</LinearLayout>
</LinearLayout>
